--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ copyright = "侯镖锋"            # default: author.name ↓        # 默认为
   version = "4.x"           # Used to give a friendly message when you have an incompatible update
   debug = false             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
 
-  since = "2016"            # Site creation time          # 站点建立时间
+  since = "2017"            # Site creation time          # 站点建立时间
   # use public git repo url to link lastmod git commit, enableGitInfo should be true.
   # 指定 git 仓库地址，可以生成指向最近更新的 git commit 的链接，需要将 enableGitInfo 设置成 true.
   gitRepo = ""
@@ -186,8 +186,10 @@ copyright = "侯镖锋"            # default: author.name ↓        # 默认为
 
   [params.social]                                         # 社交链接
     a-email = "mailto:resonhou@163.com"
-    g-github = "https://github.com/resonweb"
-    o-bilibili = "https://space.bilibili.com/449651417"
+    b-github = "https://github.com/resonweb"
+    c-gitlab = "https://gitee.com/resonhou"
+    d-bilibili = "https://space.bilibili.com/449651417"
+    e-pocket = "https://blog.reson.eu.org"
     # b-stack-overflow = "http://localhost:1313"
     # c-twitter = "http://localhost:1313"
     # d-facebook = "http://localhost:1313"
@@ -197,10 +199,10 @@ copyright = "侯镖锋"            # default: author.name ↓        # 默认为
     # h-weibo = "http://localhost:1313"
     # i-zhihu = "http://localhost:1313"
     # j-douban = "http://localhost:1313"
-    # k-pocket = "http://localhost:1313"
+    
     # l-tumblr = "http://localhost:1313"
     # m-instagram = "http://localhost:1313"
-    # n-gitlab = "http://localhost:1313"
+    
     
 
 # See https://gohugo.io/about/hugo-and-gdpr/
